--- a/AutoMall/ViewControllers/Upkeep/AutoCheckCarInfoVC.xib
+++ b/AutoMall/ViewControllers/Upkeep/AutoCheckCarInfoVC.xib
@@ -33,14 +33,14 @@
                             <nil key="textColor"/>
                             <nil key="highlightedColor"/>
                         </label>
-                        <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="行驶里程" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="dPe-n0-ed7">
-                            <rect key="frame" x="85" y="7" width="282" height="30"/>
+                        <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="行驶里程" textAlignment="right" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="dPe-n0-ed7">
+                            <rect key="frame" x="85" y="7" width="274" height="30"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="30" id="eR6-Ea-zXT"/>
                             </constraints>
                             <nil key="textColor"/>
                             <fontDescription key="fontDescription" type="system" pointSize="15"/>
-                            <textInputTraits key="textInputTraits"/>
+                            <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
                         </textField>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7Vz-bC-h5i">
                             <rect key="frame" x="16" y="44.5" width="359" height="0.5"/>
@@ -61,14 +61,14 @@
                             <nil key="textColor"/>
                             <nil key="highlightedColor"/>
                         </label>
-                        <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="燃油量" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="hJf-Q6-FZs">
-                            <rect key="frame" x="69.5" y="51" width="297.5" height="30"/>
+                        <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="燃油量" textAlignment="right" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="hJf-Q6-FZs">
+                            <rect key="frame" x="69.5" y="51" width="289.5" height="30"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="30" id="6tH-zU-OM3"/>
                             </constraints>
                             <nil key="textColor"/>
                             <fontDescription key="fontDescription" type="system" pointSize="15"/>
-                            <textInputTraits key="textInputTraits"/>
+                            <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
                         </textField>
                     </subviews>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -76,12 +76,12 @@
                         <constraint firstItem="hJf-Q6-FZs" firstAttribute="leading" secondItem="hyg-bL-581" secondAttribute="trailing" constant="8" id="0V7-YJ-KJ0"/>
                         <constraint firstItem="ecz-K0-UNC" firstAttribute="top" secondItem="H4e-j4-KlP" secondAttribute="top" constant="12" id="Ba5-4q-b9k"/>
                         <constraint firstAttribute="height" constant="89" id="CB1-Le-CLZ"/>
-                        <constraint firstAttribute="trailing" secondItem="dPe-n0-ed7" secondAttribute="trailing" constant="8" id="GKh-lw-cdv"/>
+                        <constraint firstAttribute="trailing" secondItem="dPe-n0-ed7" secondAttribute="trailing" constant="16" id="GKh-lw-cdv"/>
                         <constraint firstItem="hJf-Q6-FZs" firstAttribute="centerY" secondItem="hyg-bL-581" secondAttribute="centerY" id="MBm-bc-a5v"/>
                         <constraint firstItem="7Vz-bC-h5i" firstAttribute="leading" secondItem="H4e-j4-KlP" secondAttribute="leading" constant="16" id="Uft-dc-Nbe"/>
                         <constraint firstItem="dPe-n0-ed7" firstAttribute="centerY" secondItem="ecz-K0-UNC" secondAttribute="centerY" id="cZH-je-Wrf"/>
                         <constraint firstItem="dPe-n0-ed7" firstAttribute="leading" secondItem="ecz-K0-UNC" secondAttribute="trailing" constant="8" id="dSj-qe-aFu"/>
-                        <constraint firstAttribute="trailing" secondItem="hJf-Q6-FZs" secondAttribute="trailing" constant="8" id="gDc-tj-4GG"/>
+                        <constraint firstAttribute="trailing" secondItem="hJf-Q6-FZs" secondAttribute="trailing" constant="16" id="gDc-tj-4GG"/>
                         <constraint firstAttribute="trailing" secondItem="7Vz-bC-h5i" secondAttribute="trailing" id="kmO-Z3-UtG"/>
                         <constraint firstAttribute="bottom" secondItem="hyg-bL-581" secondAttribute="bottom" constant="12" id="v7x-Y9-qK9"/>
                         <constraint firstItem="ecz-K0-UNC" firstAttribute="leading" secondItem="H4e-j4-KlP" secondAttribute="leading" constant="16" id="wdP-MV-Zu2"/>
@@ -111,7 +111,7 @@
                 <constraint firstItem="Odr-Gp-dLx" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="qve-PK-XVa"/>
                 <constraint firstAttribute="bottom" secondItem="Odr-Gp-dLx" secondAttribute="bottom" id="rMY-iF-L1h"/>
             </constraints>
-            <point key="canvasLocation" x="-616" y="-6"/>
+            <point key="canvasLocation" x="-278" y="-6"/>
         </view>
     </objects>
 </document>
