--- a/AutoMall/ViewControllers/Upkeep/CarInfoListCell.xib
+++ b/AutoMall/ViewControllers/Upkeep/CarInfoListCell.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12121" systemVersion="16G29" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12121" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -15,7 +15,7 @@
             <rect key="frame" x="0.0" y="0.0" width="320" height="90"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="89.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="90"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="粤A 88888" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Gl5-db-mZL">
@@ -63,6 +63,16 @@
                         <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                         <nil key="highlightedColor"/>
                     </label>
+                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="GTT-db-EP4">
+                        <rect key="frame" x="262" y="20.5" width="50" height="50"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="50" id="iei-ZT-UL6"/>
+                            <constraint firstAttribute="height" constant="50" id="vdN-96-9Nu"/>
+                        </constraints>
+                        <inset key="imageEdgeInsets" minX="16" minY="16" maxX="16" maxY="16"/>
+                        <state key="normal" image="checkbox_yes"/>
+                        <state key="selected" image="checkbox_yes"/>
+                    </button>
                 </subviews>
                 <constraints>
                     <constraint firstItem="Mhc-By-FYR" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="4mD-Nc-7Zp"/>
@@ -70,19 +80,25 @@
                     <constraint firstItem="KcP-pf-5xi" firstAttribute="leading" secondItem="Mhc-By-FYR" secondAttribute="trailing" id="A6S-LS-NdO"/>
                     <constraint firstItem="NI2-FX-s9L" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="FVy-ak-4Qz"/>
                     <constraint firstItem="NI2-FX-s9L" firstAttribute="top" secondItem="Gl5-db-mZL" secondAttribute="bottom" constant="8" id="IS2-rM-dX4"/>
+                    <constraint firstItem="GTT-db-EP4" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="IvF-bM-qgq"/>
                     <constraint firstItem="dJS-hR-T37" firstAttribute="centerY" secondItem="NI2-FX-s9L" secondAttribute="centerY" id="S1c-Vx-BYh"/>
                     <constraint firstItem="Gl5-db-mZL" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="8" id="YR4-WM-cxm"/>
                     <constraint firstItem="KcP-pf-5xi" firstAttribute="centerY" secondItem="Mhc-By-FYR" secondAttribute="centerY" id="cRY-Dj-mZX"/>
                     <constraint firstAttribute="bottom" secondItem="Mhc-By-FYR" secondAttribute="bottom" constant="8" id="ntX-q2-6rI"/>
                     <constraint firstItem="Gl5-db-mZL" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="rpv-Z8-mwM"/>
+                    <constraint firstAttribute="trailing" secondItem="GTT-db-EP4" secondAttribute="trailing" constant="8" id="t9D-Tc-C4W"/>
                 </constraints>
             </tableViewCellContentView>
             <connections>
                 <outlet property="dateL" destination="KcP-pf-5xi" id="F3h-P0-gKA"/>
                 <outlet property="ownerL" destination="dJS-hR-T37" id="YNx-nV-iOD"/>
                 <outlet property="plateNumberL" destination="Gl5-db-mZL" id="JfW-Uh-Qhg"/>
+                <outlet property="selectBtn" destination="GTT-db-EP4" id="xrx-0f-Z2G"/>
             </connections>
-            <point key="canvasLocation" x="-74" y="17"/>
+            <point key="canvasLocation" x="-428" y="-84"/>
         </tableViewCell>
     </objects>
+    <resources>
+        <image name="checkbox_yes" width="27" height="27"/>
+    </resources>
 </document>
